--- a/Ira/combine5 JN.ipynb
+++ b/Ira/combine5 JN.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
@@ -302,7 +302,7 @@
        "SaleType         1.0         0.068540"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -336,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
@@ -553,7 +553,7 @@
        "SaleType         1.0         0.034305"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -581,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -641,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -669,7 +669,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -712,42 +712,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 54,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Skew in numerical features: \n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#find numerical variables so we can check skewness. \n",
     "a1 = test_train.dtypes[test_train.dtypes != \"object\"].index\n",
+    "# a1 = a1.drop(columns=['percent_grliving'])\n",
+    "a1 = ['LotFrontage',\n",
+    " 'LotArea',\n",
+    " 'MasVnrArea',\n",
+    " 'BsmtFinSF1',\n",
+    " 'BsmtFinSF2',\n",
+    " 'BsmtUnfSF',\n",
+    " 'LowQualFinSF',\n",
+    " 'GrLivArea',\n",
+    " 'BedroomAbvGr',\n",
+    " 'KitchenAbvGr',\n",
+    " 'TotRmsAbvGrd',\n",
+    " 'Fireplaces',\n",
+    " 'GarageCars',\n",
+    " 'GarageArea',\n",
+    " 'PoolArea',\n",
+    " 'MiscVal',\n",
+    " 'TotalSF',\n",
+    " 'TotalBath',\n",
+    " 'TotalPorchSF',\n",
+    " 'isNew']\n",
     "\n",
-    "skewed_features = test_train[a1].apply(lambda x: skew(x)).sort_values(ascending=False)\n",
-    "print(\"\\nSkew in numerical features: \\n\")\n",
-    "skewness = pd.DataFrame({'Skew' :skewed_features})\n",
-    "skewness\n",
+    "# skewed_features = test_train[a1].apply(lambda x: skew(x)).sort_values(ascending=False)\n",
+    "# print(\"\\nSkew in numerical features: \\n\")\n",
+    "# skewness = pd.DataFrame({'Skew' :skewed_features})\n",
+    "# skewness\n",
     "\n",
-    "#box-cox\n",
-    "skewness = skewness[abs(skewness) > 0.75].dropna()\n",
-    "skewed_feats = skewness.index\n",
-    "skewed_feats\n",
+    "# #box-cox\n",
+    "# skewness = skewness[abs(skewness) > 0.75].dropna()\n",
+    "# skewed_feats = skewness.index\n",
+    "# skewed_feats\n",
     "\n",
     "lam = 0.15\n",
-    "for x in skewed_feats:\n",
+    "for x in a1:\n",
     "    test_train[x] = boxcox1p(test_train[x], lam)\n",
     "    test_train[x] += 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -770,7 +781,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -787,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -828,7 +839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -857,7 +868,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [],
    "source": [
