adjusted pearson5 with absolute value

--- a/Ira/Pearson transformation.ipynb
+++ b/Ira/Pearson transformation.ipynb
@@ -20,7 +20,9 @@
     "\n",
     "pearson5 = try5.loc[:,['TotalSF','OverallQual','GrLivArea', 'TotalBath', 'GarageCars', \\\n",
     "                   'YearBuilt', 'YearRemodAdd', 'TotRmsAbvGrd', 'GarageArea', 'Fireplaces', \\\n",
-    "                   'MasVnrArea', 'LotArea', 'TotalPorchSF', 'Neighborhood_NridgHt', 'GarageYrBlt','ylogSalePrice']]"
+    "                   'MasVnrArea', 'LotArea', 'TotalPorchSF', 'Neighborhood_NridgHt', 'GarageYrBlt','ylogSalePrice', \\\n",
+    "                      'ExterQual_TA', 'KitchenQual_TA', 'FireplaceQu_No', 'BsmtQual_TA', 'GarageFinish_Unf', \\\n",
+    "                      'MasVnrType_None', 'GarageType_Detchd', 'Foundation_CBlock', 'HeatingQC_TA', 'GarageCond_No', ]]"
    ]
   },
   {
@@ -30,6 +32,26 @@
    "outputs": [],
    "source": [
     "pearson5.to_csv('pearson5.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1456, 16)"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pearson5.shape"
    ]
   },
   {
