--- a/Ira/Pearson transformation.ipynb
+++ b/Ira/Pearson transformation.ipynb
@@ -13,21 +13,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
     "pearson5 = try5.loc[:,['TotalSF','OverallQual','GrLivArea', 'TotalBath', 'GarageCars', \\\n",
     "                   'YearBuilt', 'YearRemodAdd', 'TotRmsAbvGrd', 'GarageArea', 'Fireplaces', \\\n",
-    "                   'MasVnrArea', 'LotArea', 'TotalPorchSF', 'Neighborhood_NridgHt', 'GarageYrBlt','ylogSalePrice', \\\n",
+    "                   'MasVnrArea', 'LotArea', 'TotalPorchSF', 'Neighborhood_NridgHt', 'GarageYrBlt', \\\n",
     "                      'ExterQual_TA', 'KitchenQual_TA', 'FireplaceQu_No', 'BsmtQual_TA', 'GarageFinish_Unf', \\\n",
-    "                      'MasVnrType_None', 'GarageType_Detchd', 'Foundation_CBlock', 'HeatingQC_TA', 'GarageCond_No', ]]"
+    "                      'MasVnrType_None', 'GarageType_Detchd', 'Foundation_CBlock', 'HeatingQC_TA', 'GarageCond_No', \\\n",
+    "                      'GarageQual_No', 'GarageFinish_No', 'GarageType_No', 'BsmtExposure_No', 'ylogSalePrice']]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,16 +37,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(1456, 16)"
+       "(1456, 30)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
