--- a/Ira/multiple Linear Regression.ipynb
+++ b/Ira/multiple Linear Regression.ipynb
@@ -35,6 +35,7 @@
     "te4 = pd.read_csv('te4.csv')\n",
     "try5 = pd.read_csv('try5.csv')\n",
     "te5 = pd.read_csv('te5.csv')\n",
+    "pearson5 = pd.read_\n",
     "\n",
     "\n",
     "liso = ['YearBuilt',\n",
