last fix to testpearson5

--- a/Ira/Pearson transformation.ipynb
+++ b/Ira/Pearson transformation.ipynb
@@ -2,21 +2,29 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "\n",
-    "try5 = pd.read_csv('try5.csv')"
+    "try5 = pd.read_csv('try5.csv')\n",
+    "te5 = pd.read_csv('te5.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
+    "testpearson5 = te5.loc[:,['TotalSF','OverallQual','GrLivArea', 'TotalBath', 'GarageCars', \\\n",
+    "                   'YearBuilt', 'YearRemodAdd', 'TotRmsAbvGrd', 'GarageArea', 'Fireplaces', \\\n",
+    "                   'MasVnrArea', 'LotArea', 'TotalPorchSF', 'Neighborhood_NridgHt', 'GarageYrBlt', \\\n",
+    "                      'ExterQual_TA', 'KitchenQual_TA', 'FireplaceQu_No', 'BsmtQual_TA', 'GarageFinish_Unf', \\\n",
+    "                      'MasVnrType_None', 'GarageType_Detchd', 'Foundation_CBlock', 'HeatingQC_TA', 'GarageCond_No', \\\n",
+    "                      'GarageQual_No', 'GarageFinish_No', 'GarageType_No', 'BsmtExposure_No']]\n",
+    "\n",
     "\n",
     "pearson5 = try5.loc[:,['TotalSF','OverallQual','GrLivArea', 'TotalBath', 'GarageCars', \\\n",
     "                   'YearBuilt', 'YearRemodAdd', 'TotRmsAbvGrd', 'GarageArea', 'Fireplaces', \\\n",
@@ -28,16 +36,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
-    "pearson5.to_csv('pearson5.csv')"
+    "pearson5.to_csv('pearson5.csv')\n",
+    "testpearson5.to_csv('testpearson5.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -46,13 +55,33 @@
        "(1456, 30)"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 35,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "pearson5.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1459, 29)"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "testpearson5.shape"
    ]
   },
   {
