combine 6, added qual and sf neighborhood columns git push origin master

--- a/Ira/multiple Linear Regression.ipynb
+++ b/Ira/multiple Linear Regression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,6 +37,8 @@
     "te5 = pd.read_csv('te5.csv')\n",
     "pearson5 = pd.read_csv('pearson5.csv')\n",
     "testpearson5 = pd.read_csv('testpearson5.csv')\n",
+    "try6 = pd.read_csv('try6.csv')\n",
+    "te6 = pd.read_csv('te6.csv')\n",
     "\n",
     "\n",
     "liso = ['YearBuilt',\n",
@@ -167,12 +169,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Create DataFrame with all the independant variables and betas\n",
-    "temp_df = pearson5.drop(['ylogSalePrice'], axis=1)\n",
+    "temp_df = try6.drop(['ylogSalePrice'], axis=1)\n",
     "# temp_df = temp_df.astype(int)\n",
     "#appending to an empty list, creating into an array then transposing\n",
     "# ll = []\n",
@@ -187,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [
     {
@@ -226,15 +228,15 @@
        "Index: []"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "missing_test = testpearson5.isna().sum()\n",
+    "missing_test = te6.isna().sum()\n",
     "missing_test = missing_test[missing_test>0]\n",
-    "missing_test_per = missing_test /testpearson5.shape[0] *100\n",
+    "missing_test_per = missing_test /te6.shape[0] *100\n",
     "t_m = pd.DataFrame([missing_test, missing_test_per], index = ['t', '%']).T\n",
     "t_m.sort_values(['%'], ascending = [False])"
    ]
