--- a/Ira/combine6 JN.ipynb
+++ b/Ira/combine6 JN.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 172,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -67,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 173,
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +284,7 @@
        "SaleType         1.0         0.034305"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 173,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -330,7 +330,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 174,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# for column in test_train.columns:\n",
+    "#     print(column)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 175,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -390,53 +400,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 176,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "NAmes      443\n",
-       "CollgCr    267\n",
-       "OldTown    239\n",
-       "Edwards    192\n",
-       "Somerst    182\n",
-       "NridgHt    166\n",
-       "Gilbert    165\n",
-       "Sawyer     151\n",
-       "NWAmes     131\n",
-       "SawyerW    125\n",
-       "Mitchel    114\n",
-       "BrkSide    108\n",
-       "Crawfor    103\n",
-       "IDOTRR      93\n",
-       "Timber      72\n",
-       "NoRidge     69\n",
-       "StoneBr     51\n",
-       "SWISU       48\n",
-       "ClearCr     44\n",
-       "MeadowV     37\n",
-       "BrDale      30\n",
-       "Blmngtn     28\n",
-       "Veenker     24\n",
-       "NPkVill     23\n",
-       "Blueste     10\n",
-       "Name: Neighborhood, dtype: int64"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# test_train['Neighborhood'].value_counts()\n",
-    "test_train['Neighborhood'].value_counts()"
+    "# tt = test_train.groupby(['YrSold','MoSold','Neighborhood'])\n",
+    "# tt.filter(lambda x: x['SaleType']=='New')\n",
+    "# #  count()[['SaleType']])\n",
+    "# # test_train['SaleType']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 177,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -464,7 +440,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 178,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -499,7 +475,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 179,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# #Added Columns\n",
+    "\n",
+    "# test_train['NegPercent'] = 1 - (test_train['LowQualFinSF']/test_train['TotalSF'])\n",
+    "# test_train['Percent'] = (test_train['LowQualFinSF']/test_train['TotalSF'])\n",
+    "# test_train['Percent']\n",
+    "# test_train['LowQualFinSF']\n",
+    "# test_train['SFOverQual'] = test_train['TotalSF'] * test_train['OverallQual']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 180,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -510,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 181,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -525,28 +516,11 @@
     " 'BsmtUnfSF',\n",
     " 'LowQualFinSF',\n",
     " 'GrLivArea',\n",
-    " 'BedroomAbvGr',\n",
-    " 'KitchenAbvGr',\n",
-    " 'TotRmsAbvGrd',\n",
-    " 'Fireplaces',\n",
-    " 'GarageCars',\n",
     " 'GarageArea',\n",
     "    'PoolArea',\n",
     " 'MiscVal',\n",
     " 'TotalSF',\n",
-    " 'TotalBath',\n",
-    " 'TotalPorchSF',\n",
-    " 'isNew']\n",
-    "\n",
-    "# skewed_features = test_train[a1].apply(lambda x: skew(x)).sort_values(ascending=False)\n",
-    "# print(\"\\nSkew in numerical features: \\n\")\n",
-    "# skewness = pd.DataFrame({'Skew' :skewed_features})\n",
-    "# skewness\n",
-    "\n",
-    "# #box-cox\n",
-    "# skewness = skewness[abs(skewness) > 0.75].dropna()\n",
-    "# skewed_feats = skewness.index\n",
-    "# skewed_feats\n",
+    " 'TotalPorchSF']\n",
     "\n",
     "lam = 0.15\n",
     "for x in a1:\n",
@@ -556,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 182,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -565,7 +539,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 183,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -598,7 +572,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 184,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -632,7 +606,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 185,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -661,12 +635,21 @@
     "# test_train['BlmngtnSF'] = test_train['TotalSF'] * test_train['Neighborhood_Blmngtn']\n",
     "test_train['VeenkerQual'] = test_train['OverallQual'] * test_train['Neighborhood_Veenker']\n",
     "test_train['NPkVillQual'] = test_train['OverallQual'] * test_train['Neighborhood_NPkVill']\n",
-    "test_train['BluesteQual'] = test_train['OverallQual'] * test_train['Neighborhood_Blueste']"
+    "test_train['BluesteQual'] = test_train['OverallQual'] * test_train['Neighborhood_Blueste']\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 186,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#extra variable\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 187,
    "metadata": {},
    "outputs": [
     {
@@ -707,7 +690,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 188,
    "metadata": {},
    "outputs": [],
    "source": [
