combine 7 new columns and removed saletype dummies except new

--- a/Ira/multiple Linear Regression.ipynb
+++ b/Ira/multiple Linear Regression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -38,12 +38,14 @@
     "pearson5 = pd.read_csv('pearson5.csv')\n",
     "testpearson5 = pd.read_csv('testpearson5.csv')\n",
     "try6 = pd.read_csv('try6.csv')\n",
-    "te6 = pd.read_csv('te6.csv')"
+    "te6 = pd.read_csv('te6.csv')\n",
+    "try7 = pd.read_csv('try7.csv')\n",
+    "te7 = pd.read_csv('te7.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -344,35 +346,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>t</th>\n",
+       "      <th>%</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: [t, %]\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#Create DataFrame with all the independant variables and betas\n",
-    "temp_df = try6.drop(['ylogSalePrice'], axis=1)\n",
-    "# temp_df = temp_df.astype(int)\n",
-    "#appending to an empty list, creating into an array then transposing\n",
-    "# ll = []\n",
-    "# for column in temp_df:\n",
-    "#     ll.append(list(temp_df[column]))\n",
-    "# lla = np.array(ll[1:])\n",
-    "# x_m = lla.T\n",
-    "# y_m = list(cleanedtrainylog['ylogSalePrice'])\n",
-    "# np.where(np.isnan(temp_df))\n",
-    "# temp_df.isna().sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 52,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# missing_test = te6.isna().sum()\n",
-    "# missing_test = missing_test[missing_test>0]\n",
-    "# missing_test_per = missing_test /te6.shape[0] *100\n",
-    "# t_m = pd.DataFrame([missing_test, missing_test_per], index = ['t', '%']).T\n",
-    "# t_m.sort_values(['%'], ascending = [False])"
+    "missing_test = try7.isna().sum()\n",
+    "missing_test = missing_test[missing_test>0]\n",
+    "missing_test_per = missing_test /try7.shape[0] *100\n",
+    "t_m = pd.DataFrame([missing_test, missing_test_per], index = ['t', '%']).T\n",
+    "t_m.sort_values(['%'], ascending = [False])"
    ]
   },
   {
@@ -409,6 +432,7 @@
    ],
    "source": [
     "#Creating variables for the model.\n",
+    "temp_df = try6.drop(['ylogSalePrice'], axis=1)\n",
     "tempfull = temp_df.iloc[:,1:]\n",
     "temp = temp_df.loc[:,list4]\n",
     "featuresfull = tempfull.copy()\n",
@@ -440,50 +464,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(1459, 293)"
-      ]
-     },
-     "execution_count": 55,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R^2 is equal to 0.932\n",
+      "RSS is equal to 15.616\n",
+      "The intercept is 3.586\n",
+      "The slopes are [ 0.06845133  0.04929278  0.07500939  0.03587801  0.04697581  0.03758662\n",
+      "  0.02506679  0.04114935  0.03769133  0.04055702  0.0242266   0.02247565\n",
+      "  0.04153058  0.00965663  0.00975809  0.00965095  0.01001645  0.01360178\n",
+      "  0.00617258  0.06845133  0.07500939  0.04929278  0.14710449  0.22654186\n",
+      "  0.03587801  0.04697581  0.03758662  0.02506679  0.0656818   0.04114935\n",
+      "  0.05703719  0.03769133  0.04055702  0.06062767  0.08126878  0.0242266\n",
+      "  0.02247565  0.04153058  0.0609558   0.05969964  0.00965663  0.04543059\n",
+      "  0.00975809  0.00965095  0.08376792  0.01001645  0.02904598  0.05662369\n",
+      "  0.07774013  0.02083309  0.02596377  0.01715057  0.06750458  0.01360178\n",
+      "  0.04237255  0.04296721  0.01357168  0.01409852  0.01177402  0.01652707\n",
+      "  0.06971158  0.01168154  0.02111722  0.04383257  0.00617258  0.01640372\n",
+      "  0.01976395  0.01378447  0.06136359  0.0027546   0.00353996  0.00210784\n",
+      " -0.00093973 -0.01176562 -0.00348684 -0.00296486 -0.00342561 -0.0099148\n",
+      " -0.01191695 -0.00594035  0.01794071 -0.03297358 -0.02192064]\n",
+      "negative slope column names Index(['YrSoldMinRem', 'BsmtFinType1_LwQ', 'GilbertQual', 'MitchelSF',\n",
+      "       'MeadowVSF', 'BedroomAbvGr', 'GarageQual_Fa', 'EdwardsQual',\n",
+      "       'BldgType_Twnhs', 'KitchenQual_Gd'],\n",
+      "      dtype='object')\n",
+      "positive slope column names Index(['SaleType_New', 'TotalSF', 'Street_Pave', 'GrLivArea', 'BsmtQual_No',\n",
+      "       'Functional_Typ', 'OverallQual', 'Percent_BsmtF',\n",
+      "       'SaleCondition_Normal', 'CentralAir_Y', 'OverallCond', 'GarageCars',\n",
+      "       'SaleType_Con', 'TotalBath', 'LotArea', 'GarageQual_Gd', 'Fireplaces',\n",
+      "       'PavedDrive_Y', 'PoolArea', 'SaleType_New', 'Street_Pave', 'TotalSF',\n",
+      "       'RoofMatl_WdShngl', 'Condition2_PosA', 'GrLivArea', 'BsmtQual_No',\n",
+      "       'Functional_Typ', 'OverallQual', 'Exterior1st_BrkFace', 'Percent_BsmtF',\n",
+      "       'BsmtExposure_Gd', 'SaleCondition_Normal', 'CentralAir_Y',\n",
+      "       'Condition1_Norm', 'MSZoning_FV', 'OverallCond', 'GarageCars',\n",
+      "       'SaleType_Con', 'MSZoning_RL', 'Condition1_PosN', 'TotalBath',\n",
+      "       'Foundation_PConc', 'LotArea', 'GarageQual_Gd', 'MSZoning_RH',\n",
+      "       'Fireplaces', 'LotConfig_CulDSac', 'Heating_GasW', 'Foundation_Stone',\n",
+      "       'CrawforQual', 'MasVnrType_Stone', 'StoneBrQual', 'SaleType_ConLD',\n",
+      "       'PavedDrive_Y', 'RoofStyle_Mansard', 'Electrical_FuseF',\n",
+      "       'HouseStyle_1.5Unf', 'BsmtFinType1_GLQ', 'NridgHtQual', 'ExterCond_TA',\n",
+      "       'Condition1_RRNn', 'NoRidgeQual', 'Neighborhood_ClearCr',\n",
+      "       'RoofMatl_Membran', 'PoolArea', 'BrkSideQual', 'GarageType_BuiltIn',\n",
+      "       'FireplaceQu_Gd', 'SaleType_Oth', 'SomerstSF', 'TotalPorchSF',\n",
+      "       'YearBuilt', 'Neighborhood_OldTown'],\n",
+      "      dtype='object')\n"
+     ]
     }
    ],
    "source": [
-    "#Checking scores and betas\n",
-    "# print('R^2 is equal to %.3f' %(lm.score(features, price)))\n",
-    "# print('RSS is equal to %.3f' %(np.sum((price-lm.predict(features))**2)))\n",
-    "# print('The intercept is %.3f' %(lm.intercept_))\n",
-    "# print('The slopes are %s' %(lm.coef_))\n",
-    "te6.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(1456, 294)"
-      ]
-     },
-     "execution_count": 56,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# #positive and negative slopes if ever\n",
-    "# print('negative slope column names %s' %(features.columns[lm.coef_<0]))\n",
-    "# print('positive slope column names %s' %(features.columns[lm.coef_>0]))\n",
-    "try6.shape"
+    "# Checking scores and betas\n",
+    "print('R^2 is equal to %.3f' %(lm.score(features, price)))\n",
+    "print('RSS is equal to %.3f' %(np.sum((price-lm.predict(features))**2)))\n",
+    "print('The intercept is %.3f' %(lm.intercept_))\n",
+    "print('The slopes are %s' %(lm.coef_))\n",
+    "#positive and negative slopes if ever\n",
+    "print('negative slope column names %s' %(features.columns[lm.coef_<0]))\n",
+    "print('positive slope column names %s' %(features.columns[lm.coef_>0]))"
    ]
   },
   {
